--- a/index.html
+++ b/index.html
@@ -10,28 +10,25 @@
   <body>
     <div class="header">
       <div class="header_one">
-	<div class="right">
-	  <div>Header Logo</div>
-	</div>
-	<div class="left">
-	<ul>
+	<div class="right">Header Logo</div>
+	<ul class="left">
 	  <li><a href="#">header link one</a></li>
 	  <li><a href="#">header link two</a></li>
 	  <li><a href="#">header link three</a></li>
 	</ul>
-	</div>
       </div>
-
       <div class="header_two">
 	<div class="header_two_left">
-	  <img src=".images/..." alt="placeholder">
+	  <img src="./images/barberry.png" alt="placeholder">
 	</div>
 	<div class="header_two_right">
-	  <div>This website is awesome</div>
-	  <div>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+	  <div class="hero_main">This website is awesome</div>
+	  <div class="secondary_main">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
 	  <button><a href="#">Sign up</a></button>
 	</div>
       </div>
+    </div>
+    
 
       <div class="body_one">
 	<div class="body_one_b1">
@@ -39,19 +36,19 @@
 	</div>
 	<div class="body_one_b2">
 	  <div class="body_one_b2_O">
-	    <div><img src="./images" alt"holder1"></div>
+	    <div class="pic"><img src="./images/chilli.png" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div><img src="./images" alt"holder1"></div>
+	    <div class="pic"><img src="./images/saffron.png" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div><img src="./images" alt"holder1"></div>
+	    <div class="pic"><img src="./images/pepper.png" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div><img src="./images" alt"holder1"></div>
+	    <div class = "pic"><img src="./images/barberry.png" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	</div>
@@ -69,10 +66,10 @@
 
       <div class="body_three">
 	<div class="body_three_first">
-	  <div>Call to action! it's time!</div>
+	  <div class="bolder">Call to action! it's time!</div>
 	  <div>Sign up for our product by clicking that button right over there!</div>
 	</div>
-	<div class-"body_three_second">
+	<div class="body_three_second">
 	  <button><a href="#">Sign up</a></button>
 	</div>
       </div>
@@ -84,3 +81,4 @@
    
   </body>
 </html>
+ 
