--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
   <body>
     <div class="header">
       <div class="header_one">
-	<div class="right">Header Logo</div>
+	<div class="righ logo">>reCIPES<</div>
 	<ul class="left">
-	  <li><a href="#">header link one</a></li>
-	  <li><a href="#">header link two</a></li>
-	  <li><a href="#">header link three</a></li>
+	  <li><a href="#">French Fries</a></li>
+	  <li><a href="#">Cheese Burger</a></li>
+	  <li><a href="#">Chicken Tenders</a></li>
 	</ul>
       </div>
       <div class="header_two">
 	<div class="header_two_left">
-	  <img src="./images/barberry.png" alt="placeholder">
+	  <img src="./images/Recipes1.jpg" alt="placeholder">
 	</div>
 	<div class="header_two_right">
-	  <div class="hero_main">This website is awesome</div>
-	  <div class="secondary_main">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+	  <div class="hero_main">Great recipes are reserved for you</div>
+	  <div class="secondary_main">In my South, the most treasured things passed down from generation to generation are the family recipes.</div>
 	  <button><a href="#">Sign up</a></button>
 	</div>
       </div>
@@ -36,19 +36,19 @@
 	</div>
 	<div class="body_one_b2">
 	  <div class="body_one_b2_O">
-	    <div class="pic"><img src="./images/chilli.png" alt"holder1"></div>
+	    <div class="pic"><img src="./images/r1.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div class="pic"><img src="./images/saffron.png" alt"holder1"></div>
+	    <div class="pic"><img src="./images/r2.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div class="pic"><img src="./images/pepper.png" alt"holder1"></div>
+	    <div class="pic"><img src="./images/r3.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div class = "pic"><img src="./images/barberry.png" alt"holder1"></div>
+	    <div class = "pic"><img src="./images/r4.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	</div>
@@ -56,17 +56,15 @@
 
       <div class="body_two">
 	<div class = "body_two_b1">
-	  <div class="text">This is an ispiring quote, or a testimonial from a customer.
-	    maybe it's just filling up space, or maybe people will actually read it. who
-	    knows? All i know is that it looks nice.
+	  <div class="tt">I hate the notion of a secret recipe. Recipes are by nature derivative and meant to be shared - that is how they improve, are changed, how new ideas are formed. To stop a recipe in it's tracks, to label it "secret" just seems mean.
 	  </div>
-	  <div class="author">-Thor, God of Thunder</div>
+	  <div class="author">-Molly Wizenberg</div>
 	</div>
       </div>
 
       <div class="body_three">
 	<div class="body_three_first">
-	  <div class="bolder">Call to action! it's time!</div>
+	  <div class="bolder">Hurrry! and reserve a package.</div>
 	  <div>Sign up for our product by clicking that button right over there!</div>
 	</div>
 	<div class="body_three_second">
