Oops! Corrected an image display problem.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="header_two">
 	<div class="header_two_left">
-	  <img src="./images/Recipes1.jpg" alt="placeholder">
+	  <img src="https://www.uaex.uada.edu/life-skills-wellness/food-nutrition/eating-well/EFNEP/images/Recipes-Banner.jpg" alt="placeholder">
 	</div>
 	<div class="header_two_right">
 	  <div class="hero_main">Great recipes are reserved for you</div>
@@ -36,19 +36,19 @@
 	</div>
 	<div class="body_one_b2">
 	  <div class="body_one_b2_O">
-	    <div class="pic"><img src="./images/r1.jpeg" alt"holder1"></div>
+	    <div class="pic"><img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/3/14/0/0181847_pork-chops_s4x3.jpg.rend.hgtvcom.476.357.suffix/1393206943617.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div class="pic"><img src="./images/r2.jpeg" alt"holder1"></div>
+	    <div class="pic"><img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2010/4/7/1/0062977F1_Lemon-Basil-Potatoes_s4x3.jpg.rend.hgtvcom.966.725.suffix/1432446506130.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div class="pic"><img src="./images/r3.jpeg" alt"holder1"></div>
+	    <div class="pic"><img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2021/11/04/0/FNM_120121-Kuku-Sabzi-Persian-Herb-Frittata_s4x3.jpg.rend.hgtvcom.966.725.suffix/1636035326169.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	  <div class="body_one_b2_O">
-	    <div class = "pic"><img src="./images/r4.jpeg" alt"holder1"></div>
+	    <div class = "pic"><img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2020/11/16/0/FNK_Marinated-Feta_H1_s4x3.jpg.rend.hgtvcom.966.725.suffix/1605560748113.jpeg" alt"holder1"></div>
 	    <div class="text">this is some subtext under an illustration or image</div>
 	  </div>
 	</div>
